--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ Django==4.2.25
 gunicorn==21.2.0
 idna==3.11
 psycopg2-binary==2.9.9
+pytz==2023.3
 requests==2.32.5
 sqlparse==0.5.3
 typing_extensions==4.15.0
