--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,4 @@ sqlparse==0.5.3
 typing_extensions==4.15.0
 urllib3==2.5.0
 whitenoise==6.6.0
+# Note: sqlparse est une dépendance de Django, listée explicitement pour éviter les erreurs d'import
